kubernetes/cluster/policy-test/verification-rbac.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-policy-verifier-apiserver
  namespace: veridex-policy-test
spec:
  endpointSelector:
    matchLabels:
      veridex.io/policy-role: admission-verifier
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
